<?xml version="1.0"?>
<package format="2">
  <name>rbeken_control</name>
  <version>0.0.0</version>
  <description>The rbeken_control package</description>

  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="jgomez@robotnik.es">Jose Gómez</maintainer>
  <maintainer email="mmillet@robotnik.es">Marta Millet</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rbeken_pad</exec_depend>
  <exec_depend>twist_mux</exec_depend> 
  
  <export>

  </export>
</package>
